--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   },
   "dependencies": {
     "express": "3.1.x"
+  },
+  "scripts": {
+    "prestart": "sudo npm install",
+    "start": "node server &"
   }
 }
